.k8s/uptime-kuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: m324-csbe1
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
