.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hablopablo
  namespace: m324-csbe1
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - lb01-jl-mb.m324.hackerman.ch
      secretName: lb01-jl-mb.m324.hackerman.ch-tls
  rules:
    - host: lb01-jl-mb.m324.hackerman.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lb01-jl-mb
                port:
                  number: 3000 # Adjust the port to match your container port
