.k8s/uptime-kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: m324-csbe1
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - uptime-kuma-jl-mb.m324.hackerman.ch
      secretName: uptime-kuma-jl-mb.m324.hackerman.ch-tls
  rules:
    - host: uptime-kuma-jl-mb.m324.hackerman.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 80
